deploy/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: biosimulations-api
  name: biosimulations-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: biosimulations-api
  replicas: 3
  template:
    metadata:
      labels:
        app: biosimulations-api
    spec:
      containers:
        - name: biosimulations-api
          image: crbm/biosimulations-api:latest
          imagePullPolicy: "Always"

          volumeMounts:
            - mountPath: "/app/config"
              name: config
              readOnly: true
          ports:
            - containerPort: 3333

      volumes:
        - name: config
          secret:
            secretName: biosimulations-secrets-6fcm989gbf
